--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -338,9 +338,6 @@ code {
 ul.connections-list li:last-child {
   margin-bottom: 10px;
 }
-a span.category {
-  color: #bbb;
-}
 #unlink-undo-message div.alert {
   padding-right: 14px;
   /* right-aligned undo button in page connections */
@@ -605,10 +602,6 @@ img.thumb {
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
-}
-ul.tree-list img.admin-list-dashboard {
-  width: 21.33333333px;
-  height: 16px;
 }
 img.admin-list-overview {
   width: 80px;
@@ -1207,13 +1200,10 @@ div.widget-content .mce-reset {
   font-size: 13px;
 }
 ul.tree-list {
-  margin: 0;
+  margin: 0 0 15px 0;
 }
 ul.tree-list li.menu-item {
   line-height: 1.2;
-}
-ul.tree-list li.menu-item:last-child {
-  margin: 0 0 15px 0;
 }
 ul.tree-list li.menu-item li.menu-item:last-child {
   margin: 0;
@@ -1231,10 +1221,10 @@ ul.tree-list li.menu-item .z-btn-remove {
 }
 ul.tree-list li.menu-item .z-icon-drag {
   color: #999;
-  left: 10px;
+  left: 12px;
 }
 ul.tree-list li.menu-item .z-btn-remove {
-  right: 10px;
+  right: 12px;
 }
 ul.tree-list li.menu-item > div {
   position: relative;
@@ -1252,7 +1242,7 @@ ul.tree-list li.menu-item > div > a,
 ul.tree-list li.menu-item > div > span:not(.btns) {
   display: inline-block;
   width: 100%;
-  padding: 10px 40px 10px 32px;
+  padding: 10px 40px 10px 40px;
   min-height: 34px;
 }
 ul.tree-list li.menu-item > div > a {
@@ -1262,12 +1252,9 @@ ul.tree-list li.menu-item > div > a:hover {
   color: #222222;
   text-decoration: none;
 }
-ul.tree-list li.menu-item > div > a > span {
-  font-size: 12px;
-}
 ul.tree-list li.menu-item > div a.menu-toggle {
   position: absolute;
-  width: 34px;
+  width: 40px;
   height: 34px;
   line-height: 34px;
   color: #ccc;
@@ -1292,6 +1279,17 @@ ul.tree-list li.menu-item > div a.menu-toggle > i.menu-collapse {
 ul.tree-list li.menu-item > div a.menu-toggle > i.menu-expand {
   display: block;
 }
+ul.tree-list li.menu-item img.admin-list-dashboard {
+  position: absolute;
+  width: 21.33333333px;
+  height: 16px;
+  left: 40px;
+  top: 50%;
+  margin-top: -8px;
+}
+ul.tree-list li.menu-item img + span {
+  padding-left: 31.33333333px;
+}
 ul.tree-list li.menu-item.has-submenu > div a.menu-toggle {
   display: block;
 }
@@ -1315,7 +1313,7 @@ ul.tree-list li.menu-item .warning {
 ul.tree-list li.menu-item .btns {
   display: block;
   position: absolute;
-  right: 10px;
+  right: 12px;
   top: 7px;
 }
 ul.tree-list li.menu-item .btns .btn-group {
