mod_admin: improve layout of thumbnails in find dialog
Use link tag for thumbs so that urls can be viewed in a browser.
Adds ability to pass search text to dialog.

--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -1116,9 +1116,16 @@ th a:hover .arrow.down {
   font-size: 12px;
   line-height: 1.1em;
   position: relative;
+  transition-duration: 0;
+  -webkit-transition-duration: 0;
+}
+.thumbnails .thumbnail,
+.thumbnails .thumbnail a:link,
+.thumbnails .thumbnail a:visited {
+  color: #222222;
 }
 .thumbnails .thumbnail:hover {
-  background-color: #eeeeee;
+  border-color: #888888;
 }
 .thumbnails .thumbnail .z-thumbnail-text {
   position: absolute;
