--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -418,6 +418,7 @@
 @backgroundColorInteractiveLight: @backgroundColorLightest;
 @backgroundDragPlaceholder: #ddd;
 
+@borderColorSelection: #888;
 @borderColorDark: #d4d4d4;
 @borderColorMedium: #d9d9d9;
 @borderColorMediumTransparent: fadeout(#d9d9d9, 40%);
