--- a/modules/mod_admin/lib/less/tree-list.less
+++ b/modules/mod_admin/lib/less/tree-list.less
@@ -92,6 +92,9 @@ ul.tree-list {
                     display: block;
                 }
             }
+            .label {
+                color: @textColorMuted;
+            }
         }
 
         @_img_width: 32px / 3 * 2;
