mod_admin: show default text when no features are enabled
Update translation files

--- a/modules/mod_admin/lib/less/edit.less
+++ b/modules/mod_admin/lib/less/edit.less
@@ -159,6 +159,10 @@ input.do_timepicker {
     opacity: 1.0;
 }
 
+div + .admin-edit-no-features {
+    display: none;
+}
+
 @media (max-width: @breakpointMediumMaxWidth) {
     .admin-navbar-fixed-save {
         position: fixed;
