--- a/modules/mod_admin/lib/css/zotonic-admin.css
+++ b/modules/mod_admin/lib/css/zotonic-admin.css
@@ -557,6 +557,9 @@ input.do_timepicker {
 .scrolled .admin-navbar-fixed-save {
   opacity: 1.0;
 }
+div + .admin-edit-no-features {
+  display: none;
+}
 @media (max-width: 991px) {
   .admin-navbar-fixed-save {
     position: fixed;
