zotonic_status: fix error message
Add hint where to find password.
Use same colors as admin.

--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -429,6 +429,7 @@
 @textColorButton: #888;
 @textColorMuted: #999;
 @textColorLight: #bbb;
+@textColorError: #D84315;
 
 @colorLink: #069cd1;
 @colorLinkHover: #046487;
