--- a/modules/mod_admin/lib/less/bootstrap-overrides.less
+++ b/modules/mod_admin/lib/less/bootstrap-overrides.less
@@ -6,7 +6,11 @@
 }
 .btn {
     &.disabled {
+        pointer-events: none;
         color: @textColorMuted;
+        background: transparent;
+        color: @textColorLight;
+        opacity: 1;
         
         .glyphicon {
             opacity: .6;
@@ -93,6 +97,7 @@
 
     background-color: @backgroundColorLightest;
     padding: @_padding;
+    #3L > .box-shadow(none);
     
     &.z-button-row {
         padding: @_padding @_padding (@_padding - @_button_margin) @_padding;
