--- a/modules/mod_admin/lib/less/widget.less
+++ b/modules/mod_admin/lib/less/widget.less
@@ -31,6 +31,10 @@
                 };
             }
         }
+        
+        .table-like {
+            padding: @table-cell-padding @widgetSidePadding;
+        }
 
         hr {
             margin: 15px -@widgetSidePadding;
