--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -61,11 +61,11 @@
 @table-bg-accent: #f9f9f9;
 @table-bg-hover: #f5f5f5;
 @table-bg-active: @table-bg-hover;
-@table-border-color: #ddd;
+@table-border-color: #e5e5e5;
 @btn-font-weight: normal;
-@btn-default-color: #333;
+@btn-default-color: #555;
 @btn-default-bg: #fff;
-@btn-default-border: #ccc;
+@btn-default-border: #ddd;
 @btn-primary-color: #fff;
 @btn-primary-bg: @brand-primary;
 @btn-primary-border: darken(@btn-primary-bg, 5%);
@@ -422,7 +422,7 @@
 @borderColorDark: #d4d4d4;
 @borderColorMedium: #d9d9d9;
 @borderColorMediumTransparent: fadeout(#d9d9d9, 40%);
-@borderColorLight: #e5e5e5;
+@borderColorLight: #e5e5e5; // also table color
 
 @textColorDark: #222;
 @textColorMedium: #777;
