--- a/modules/mod_admin/lib/admin-bootstrap3/css/bootstrap.css
+++ b/modules/mod_admin/lib/admin-bootstrap3/css/bootstrap.css
@@ -5,8 +5,8 @@
  */
 
 /*!
- * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=c90572b23d422f034150)
- * Config saved to config.json and https://gist.github.com/c90572b23d422f034150
+ * Generated using the Bootstrap Customizer (http://getbootstrap.com/customize/?id=0bc6eed74a71356865be)
+ * Config saved to config.json and https://gist.github.com/0bc6eed74a71356865be
  */
 /*!
  * Bootstrap v3.3.5 (http://getbootstrap.com)
@@ -5511,7 +5511,7 @@ button.list-group-item-danger.active:focus {
   padding: 15px;
 }
 .panel-heading {
-  padding: 10px 15px;
+  padding: 15px;
   border-bottom: 1px solid transparent;
   border-top-right-radius: 3px;
   border-top-left-radius: 3px;
@@ -5533,7 +5533,7 @@ button.list-group-item-danger.active:focus {
   color: inherit;
 }
 .panel-footer {
-  padding: 10px 15px;
+  padding: 15px;
   background-color: #f5f5f5;
   border-top: 1px solid #dddddd;
   border-bottom-right-radius: 3px;
