mod_admin: align variables with bootstrap config

--- a/modules/mod_admin/lib/less/variables.less
+++ b/modules/mod_admin/lib/less/variables.less
@@ -68,7 +68,7 @@
 @btn-default-border: #ddd;
 @btn-primary-color: #fff;
 @btn-primary-bg: @brand-primary;
-@btn-primary-border: darken(@btn-primary-bg, 5%);
+@btn-primary-border: @brand-primary;
 @btn-success-color: #fff;
 @btn-success-bg: @brand-success;
 @btn-success-border: darken(@btn-success-bg, 5%);
@@ -305,7 +305,7 @@
 @list-group-link-heading-color: #333;
 @panel-bg: #fff;
 @panel-body-padding: 15px;
-@panel-heading-padding: 15px 15px;
+@panel-heading-padding: 15px;
 @panel-footer-padding: @panel-heading-padding;
 @panel-border-radius: @border-radius-base;
 @panel-inner-border: #ddd;
@@ -361,8 +361,8 @@
 @close-font-weight: bold;
 @close-color: #000;
 @close-text-shadow: 0 1px 0 #fff;
-@code-color: #c7254e;
-@code-bg: #f9f2f4;
+@code-color: @gray-dark;
+@code-bg: transparent;
 @kbd-color: #fff;
 @kbd-bg: #333;
 @pre-bg: #f5f5f5;
